# Hunyuan3D-2

./: .gitignore  .readthedocs.yaml  LICENSE  NOTICE  OREN  README.md  api_server.py  app.py  gen_config.json  generate.py  gradio_app.py  post.py  pyproject.toml  trimesh_test.py
docs/: README.md
docs/source/: citation.md  conf.py  index.md  modelzoo.md
docs/source/started/: api.md  code.md  gradio.md
examples/: shape_gen.py  shape_gen_v2_1.py
hy3dgen/: __init__.py  rembg.py  text2image.py
hy3dgen/shapegen/: pipelines.py  postprocessors.py  preprocessors.py  schedulers.py  surface_loaders.py  utils.py
hy3dgen/shapegen/models/: __init__.py  conditioner.py
hy3dgen/shapegen/models/autoencoders/: __init__.py  attention_blocks.py  attention_processors.py  model.py  surface_extractors.py  volume_decoders.py
hy3dgen/shapegen/models/denoisers/: hunyuan3ddit.py  hunyuandit.py  moe_layers.py
hy3dgen/texgen/: pipelines.py
hy3dgen/texgen/custom_rasterizer/: setup.py
hy3dgen/texgen/custom_rasterizer/custom_rasterizer/: io_glb.py  io_obj.py  render.py
hy3dgen/texgen/custom_rasterizer/lib/custom_rasterizer_kernel/: grid_neighbor.cpp  rasterizer.cpp  rasterizer_gpu.cu
hy3dgen/texgen/differentiable_renderer/: camera_utils.py  mesh_processor.cpp  mesh_processor.py  mesh_render.py  setup.py
hy3dgen/texgen/hunyuanpaint/: pipeline.py
hy3dgen/texgen/hunyuanpaint/unet/: modules.py
hy3dgen/texgen/utils/: alignImg4Tex_utils.py  counter_utils.py  dehighlight_utils.py  imagesuper_utils.py  multiview_utils.py  simplify_mesh_utils.py
