[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hy3dgen"
version = "2.0.2"
readme = "README.md"
license = "LicenseRef-Tencent-Hunyuan-Community"
license-files = ["LICENSE", "NOTICE"]
authors = [{name = "Tencent"}]
dependencies = [
    "accelerate",
    "diffusers",
    "einops",
    "fastapi",
    "gradio",
    "huggingface-hub[hf-transfer, hf-xet]",
    "ninja",
    "numpy",
    "omegaconf",
    "onnxruntime",
    "opencv-python",
    "pybind11",
    "pygltflib",
    "pymeshlab",
    "rembg",
    "tqdm>=4.66.3",
    "transformers>=4.48.0",
    "trimesh",
    "uvicorn",
    "xatlas",
]

[project.urls]
Homepage = "https://hunyuan-3d.com/"
Repository = "https://github.com/Tencent-Hunyuan/Hunyuan3D-2.git"

[tool.setuptools.packages]
find = {}

[tool.setuptools.package-data]
hy3dgen = ["assets/*", "assets/**/*"]