[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hy3dgen"
version = "2.0.2"
readme = "README.md"
license = "LicenseRef-Tencent-Hunyuan-Community"
license-files = ["LICENSE", "NOTICE"]
authors = [
    {name = "Hunyuan3D Team"},
    {name = "Tencent"},
]
dependencies = [
    "accelerate",
    "diffusers",
    "einops",
    "fastapi",
    "huggingface-hub[hf-xet]",
    "ninja",
    "numpy==1.26.4",
    "omegaconf",
    "onnxruntime-gpu",
    "opencv-python",
    "pandas==2.0.3",
    "pybind11",
    "pygltflib",
    "pymeshlab",
    "rembg[gpu]",
    "scipy==1.11.4",
    "torch==2.0.1+cu118",
    "torchvision==0.15.2+cu118",
    "tqdm>=4.66.3",
    "transformers>=4.48.0",
    "trimesh",
    "uvicorn",
    "xatlas",
]

[project.urls]
Homepage = "https://hunyuan-3d.com/"
Repository = "https://github.com/Tencent-Hunyuan/Hunyuan3D-2.git"

[tool.setuptools.packages.find]
where = ["hy3dgen"]